Actualización del ejercicio base

--- a/modulo3/proyectos/E_ComponenteMensaje/web/index.xhtml
+++ b/modulo3/proyectos/E_ComponenteMensaje/web/index.xhtml
@@ -8,7 +8,7 @@
     </h:head>
     <h:body>
         <mc:mensaje 
-                color="blue"
+                color="red"
                 codigo="404" 
                 titulo="Página no encontrada"
                 descripcion="Un recurso no fue encontrado, intente nuevamente" />        
